initialSetup/main/default/objects/HealthcareFacility/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>