initialSetup/main/default/objects/HealthcareFacility/fields/Count_of_Enrolled_Patients__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrolled_Patients__c</fullName>
    <label>Count of Enrolled Patients</label>
    <summaryFilterItems>
        <field>Patient_Site__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>Patient_Site__c.Healthcare_Facility__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>