initialSetup/main/default/objects/HealthcareFacility/fields/Drug_Storage_Facility_Available__c.field-meta.xml
<CustomField>
    <fullName>Drug_Storage_Facility_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drug Storage Facility Available</label>
    <type>Checkbox</type>
</CustomField>