initialSetup/main/default/objects/HealthcareFacility/fields/EMR_EHR_Available__c.field-meta.xml
<CustomField>
    <fullName>EMR_EHR_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMR/EHR Available</label>
    <type>Checkbox</type>
</CustomField>