initialSetup/main/default/objects/HealthcareFacility/fields/Ethics_Committee_Present__c.field-meta.xml
<CustomField>
    <fullName>Ethics_Committee_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethics Committee Present</label>
    <type>Checkbox</type>
</CustomField>