initialSetup/main/default/objects/HealthcareFacility/fields/Expected_Patient_Pool__c.field-meta.xml
<CustomField>
    <fullName>Expected_Patient_Pool__c</fullName>
    <description>Indicates the estimated number of patients at the site who meet the trial&apos;s inclusion and exclusion criteria.</description>
    <label>Expected Patient Pool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>