initialSetup/main/default/objects/HealthcareFacility/fields/Lab_Facility_Available__c.field-meta.xml
<CustomField>
    <fullName>Lab_Facility_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lab Facility Available</label>
    <type>Checkbox</type>
</CustomField>