initialSetup/main/default/objects/HealthcareFacility/fields/Number_of_Coordinators__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Coordinators__c</fullName>
    <label>Number of Coordinators</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>