initialSetup/main/default/objects/HealthcareFacility/fields/Patient_Pool_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pool_Type__c</fullName>
    <label>Patient Pool Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>