initialSetup/main/default/objects/HealthcareFacility/fields/Previous_Enrollment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Enrollment_Rate__c</fullName>
    <description>Historical patient enrollment %</description>
    <label>Previous Enrollment Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>