initialSetup/main/default/objects/HealthcareFacility/fields/Previous_Trial_Experience__c.field-meta.xml
<CustomField>
    <fullName>Previous_Trial_Experience__c</fullName>
    <description>To check How many trials has the site conducted before?</description>
    <label>Previous Trial Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>