initialSetup/main/default/objects/HealthcareFacility/fields/Recruitment_Channels__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Channels__c</fullName>
    <label>Recruitment Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinic Visits</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Physician Referrals</fullName>
            </value>
            <value>
                <fullName>Community Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>