initialSetup/main/default/objects/HealthcareFacility/fields/Speed_of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Enrollment__c</fullName>
    <label>Speed of Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Slow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>